# axonal

./: Cargo.toml  README.md
.cargo/: config.toml
docs/: cli.md
kernels/cuda/: mxq_kernels.cu
src/: accelerated.rs  backend.rs  lib.rs  main.rs  transformer.rs
