[package]
name = "axonal"
version = "0.1.0"
edition = "2024"

[features]
default = ["cuda"]
cuda = ["candle-core/cuda", "candle-nn/cuda", "candle-transformers/cuda"]

[lib]
name = "axonal"
path = "src/lib.rs"

[[bin]]
name = "axonal"
path = "src/main.rs"

[dependencies]
aes-gcm = "0.10"
anyhow = "1.0"
axum = "0.8"
candle-core = { version = "0.9.2", default-features = false }
candle-nn = { version = "0.9.2", default-features = false }
candle-transformers = { version = "0.9.2", default-features = false }
clap = { version = "4.5", features = ["derive"] }
dirs = "6.0"
half = "2.7"
minijinja = { version = "2.12", features = ["json"] }
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
rpassword = "7.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tokenizers = "0.22"
tokio = { version = "1.48", features = ["macros", "rt-multi-thread", "net"] }
xxhash-rust = { version = "0.8", features = ["xxh64"] }
zstd = "0.13"

[dev-dependencies]
tempfile = "3.15"

[patch.crates-io]
candle-core = { path = "vendor/candle-core-0.9.2" }
candle-kernels = { path = "vendor/candle-kernels-0.9.2" }
